task1/client/src/components/EmployeeDetailsModal/EmployeeDetailsModal.scss
@import "../../globals.scss";
.modal-container{
	transition: opacity .3s;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	display: grid;
	justify-content: center;
	align-content: center;
	background: hsla(219,18%,78%,.5);

	.modal-content {
		padding: 24px;
		border-radius: 16px;
		width: 500px;
		background-color: white;
		box-shadow: 0px 0px 20px 0px hsla(0,0%,0%,.1);
		display: grid;
		row-gap: 14px;
		grid-template-columns: 3.9fr 6.1fr;
		
		.modal-header{
			margin-bottom: 26px;
			grid-column: 1/3;
			display: flex;
			justify-content: space-between;
			align-items: center;

			.employee-name {
				line-height: 30px;
				font-weight: 700;
			}

			.modal-close {
				height: 20px;
				width: 20px;
				cursor: pointer;
			}
		}

		.employee-data-label {
			font-size: 18px;
			line-height: 24px;
			color: $text-primary;
			font-family: $font-primary;
		}

		.employee-data {
			color: $text-light;
			line-height: 16px;
			align-self: center;
		}

		.modal-footer {
			margin-top: 30px;
			grid-column: 1/3;
			display: grid;
			row-gap: 12px;
			
			.employee-additionalInfo {
				line-height: 18px;
			}
		}
	}
}

@media screen and (max-width: 500px) {
	.modal-container{
		.modal-content {
			display: flex;
			flex-flow: column;
			width: calc(100% - 24px);
			margin: 0 12px;
			.employee-data{
				align-self: start;
			}
		}
	}
}

